build: update to Nx 16.7.4, Angular v16.2.x

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -9,9 +9,9 @@
       "executor": "@nx/vite:build",
       "outputs": [
         "{options.outputPath}",
-        "dist/apps/analog-app/.nitro",
-        "dist/apps/analog-app/ssr",
-        "dist/apps/analog-app/analog"
+        "{workspaceRoot}/dist/apps/analog-app/.nitro",
+        "{workspaceRoot}/dist/apps/analog-app/ssr",
+        "{workspaceRoot}/dist/apps/analog-app/analog"
       ],
       "options": {
         "configFile": "apps/analog-app/vite.config.ts",
@@ -70,7 +70,7 @@
     },
     "test": {
       "executor": "@nx/vite:test",
-      "outputs": ["apps/analog-app/coverage"]
+      "outputs": ["{projectRoot}/coverage"]
     }
   },
   "tags": []
