--- a/package.json
+++ b/package.json
@@ -42,20 +42,20 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "^16.1.0",
-    "@angular/common": "^16.1.0",
-    "@angular/compiler": "^16.1.0",
-    "@angular/core": "^16.1.0",
-    "@angular/forms": "^16.1.0",
-    "@angular/platform-browser": "^16.1.0",
-    "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/platform-server": "^16.1.0",
-    "@angular/router": "^16.1.0",
+    "@angular/animations": "16.2.2",
+    "@angular/common": "16.2.2",
+    "@angular/compiler": "16.2.2",
+    "@angular/core": "16.2.2",
+    "@angular/forms": "16.2.2",
+    "@angular/platform-browser": "16.2.2",
+    "@angular/platform-browser-dynamic": "16.2.2",
+    "@angular/platform-server": "16.2.2",
+    "@angular/router": "16.2.2",
     "@astrojs/react": "^2.0.2",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "1.6.22",
-    "@nx/angular": "16.5.1",
-    "@nx/devkit": "16.5.1",
+    "@nx/angular": "16.7.4",
+    "@nx/devkit": "16.7.4",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "@types/babel__core": "^7.20.0",
@@ -82,28 +82,28 @@
     "zone.js": "0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.0",
-    "@angular-devkit/core": "^16.1.0",
-    "@angular-devkit/schematics": "^16.1.0",
+    "@angular-devkit/build-angular": "16.2.0",
+    "@angular-devkit/core": "16.2.0",
+    "@angular-devkit/schematics": "16.2.0",
     "@angular-eslint/eslint-plugin": "16.0.1",
     "@angular-eslint/eslint-plugin-template": "16.0.1",
     "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "^16.1.0",
-    "@angular/language-service": "^16.1.0",
+    "@angular/cli": "~16.2.0",
+    "@angular/compiler-cli": "16.2.2",
+    "@angular/language-service": "16.2.2",
     "@astrojs/markdown-component": "^1.0.2",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@ngtools/webpack": "^16.1.0",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
-    "@nx/cypress": "16.5.1",
-    "@nx/eslint-plugin": "16.5.1",
-    "@nx/jest": "16.5.1",
-    "@nx/linter": "16.5.1",
-    "@nx/plugin": "16.5.1",
-    "@nx/vite": "16.5.1",
-    "@nx/web": "16.5.1",
-    "@schematics/angular": "^16.1.0",
+    "@nx/cypress": "16.7.4",
+    "@nx/eslint-plugin": "16.7.4",
+    "@nx/jest": "16.7.4",
+    "@nx/linter": "16.7.4",
+    "@nx/plugin": "16.7.4",
+    "@nx/vite": "16.7.4",
+    "@nx/web": "16.7.4",
+    "@schematics/angular": "16.2.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
     "@swc/core": "^1.2.173",
@@ -121,9 +121,9 @@
     "cpy-cli": "^4.2.0",
     "cypress": "12.17.1",
     "esbuild": "0.18.19",
-    "eslint": "~8.33.0",
+    "eslint": "8.46.0",
     "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-cypress": "2.14.0",
     "execa": "^7.1.1",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.1",
@@ -134,10 +134,10 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^16.1.0",
+    "ng-packagr": "16.2.1",
     "nitropack": "^2.0.0",
-    "nx": "16.5.1",
-    "nx-cloud": "16.1.0",
+    "nx": "16.7.4",
+    "nx-cloud": "16.3.0",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
