--- a/apps/astro-app/project.json
+++ b/apps/astro-app/project.json
@@ -1,5 +1,6 @@
 {
   "name": "astro-app",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/astro-app/src",
   "targets": {
