--- a/packages/vite-plugin-nitro/project.json
+++ b/packages/vite-plugin-nitro/project.json
@@ -35,7 +35,7 @@
     },
     "test": {
       "executor": "@nx/vite:test",
-      "outputs": ["coverage/packages/vite-plugin-nitro"],
+      "outputs": ["{workspaceRoot}/coverage/packages/vite-plugin-nitro"],
       "options": {
         "passWithNoTests": true,
         "reportsDirectory": "../../coverage/packages/vite-plugin-nitro"
