feat(astro-angular): implement output forwarding on client-side hydrated components

--- a/packages/astro-angular/package.json
+++ b/packages/astro-angular/package.json
@@ -6,6 +6,7 @@
   "author": "Brandon Roberts <robertsbt@gmail.com>",
   "exports": {
     ".": "./src/index.js",
+    "./utils": "./src/utils.js",
     "./client.js": "./src/client.js",
     "./server.js": "./src/server.js",
     "./package.json": "./package.json"
