chore(content): fix build errors in docs-app project

--- a/apps/docs-app/package.json
+++ b/apps/docs-app/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0"
+    "@docusaurus/module-type-aliases": "2.2.0",
+    "@docusaurus/types": "2.4.1"
   },
   "overrides": {
     "@docusaurus/core": {
