build: update to Nx 16.8.x

--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "1.6.22",
-    "@nx/angular": "16.7.4",
-    "@nx/devkit": "16.7.4",
+    "@nx/angular": "16.8.1",
+    "@nx/devkit": "16.8.1",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "@types/babel__core": "^7.20.0",
@@ -95,13 +95,13 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@ngtools/webpack": "^16.1.0",
-    "@nx/cypress": "16.7.4",
-    "@nx/eslint-plugin": "16.7.4",
-    "@nx/jest": "16.7.4",
-    "@nx/linter": "16.7.4",
-    "@nx/plugin": "16.7.4",
-    "@nx/vite": "16.7.4",
-    "@nx/web": "16.7.4",
+    "@nx/cypress": "16.8.1",
+    "@nx/eslint-plugin": "16.8.1",
+    "@nx/jest": "16.8.1",
+    "@nx/linter": "16.8.1",
+    "@nx/plugin": "16.8.1",
+    "@nx/vite": "16.8.1",
+    "@nx/web": "16.8.1",
     "@schematics/angular": "16.2.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
@@ -118,8 +118,8 @@
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
-    "cypress": "12.17.1",
-    "esbuild": "0.18.19",
+    "cypress": "^13.0.0",
+    "esbuild": "0.19.3",
     "eslint": "8.46.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "2.14.0",
@@ -135,8 +135,8 @@
     "minimist": "^1.2.7",
     "ng-packagr": "16.2.1",
     "nitropack": "^2.0.0",
-    "nx": "16.7.4",
-    "nx-cloud": "16.3.0",
+    "nx": "16.8.1",
+    "nx-cloud": "16.4.0",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
