chore: set type module at root, fix E2E tests
an empty message aborts the commit. # # On branch build-esm-packages # Changes to be committed: #
new file:  apps/analog-app-e2e-cypress/package.json # new file:
apps/analog-app-e2e-playwright/package.json # modified:  apps/analog-app/project.json # renamed:
apps/analog-app/vite.config.mts -> apps/analog-app/vite.config.ts # renamed:
apps/analog-preset-e2e/vite.config.mts -> apps/analog-preset-e2e/vite.config.ts # new file:
apps/astro-app-e2e-playwright/package.json # modified:
apps/astro-app-e2e-playwright/tests/app.spec.ts # renamed:
apps/astro-app-e2e-playwright/vite.config.mts -> apps/astro-app-e2e-playwright/vite.config.ts # new
file:  apps/blog-app-e2e-cypress/package.json # modified:  apps/blog-app/project.json # renamed:
apps/blog-app/vite.config.mts -> apps/blog-app/vite.config.ts # modified:
apps/create-analog-e2e/tests/create-analog.spec.ts # renamed:  apps/trpc-app/postcss.config.js ->
apps/trpc-app/postcss.config.cjs # modified:  apps/trpc-app/project.json # renamed:
apps/trpc-app/tailwind.config.js -> apps/trpc-app/tailwind.config.cjs # renamed:
apps/trpc-app/vite.config.mts -> apps/trpc-app/vite.config.ts # renamed:  commitlint.config.js ->
commitlint.config.cjs # modified:  package.json # modified:
packages/create-analog/template-angular-v16/angular.json # modified:
packages/create-analog/template-angular-v16/package.json # renamed:
packages/create-analog/template-angular-v16/vite.config.mts ->
packages/create-analog/template-angular-v16/vite.config.ts # modified:
packages/vite-plugin-nitro/src/lib/vite-plugin-nitro.ts #

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -14,7 +14,7 @@
         "{workspaceRoot}/dist/apps/analog-app/analog"
       ],
       "options": {
-        "configFile": "apps/analog-app/vite.config.mts",
+        "configFile": "apps/analog-app/vite.config.ts",
         "outputPath": "dist/apps/analog-app/client"
       },
       "defaultConfiguration": "production",
