--- a/apps/blog-app/project.json
+++ b/apps/blog-app/project.json
@@ -14,7 +14,7 @@
         "{workspaceRoot}/dist/apps/blog-app/analog"
       ],
       "options": {
-        "configFile": "apps/blog-app/vite.config.mts",
+        "configFile": "apps/blog-app/vite.config.ts",
         "outputPath": "dist/apps/blog-app/client"
       },
       "defaultConfiguration": "production",
