--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "analogjs-platform",
   "version": "0.2.3",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "nx serve",
     "ng": "nx",
