--- a/packages/create-analog/template-angular-v16/package.json
+++ b/packages/create-analog/template-angular-v16/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "engines": {
     "node": "^16.14.0 || >=18.10.0"
