--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -31,6 +31,7 @@
   },
   "generators": "./src/lib/nx-plugin/generators.json",
   "schematics": "./src/lib/nx-plugin/generators.json",
+  "executors": "./src/lib/nx-plugin/executors.json",
   "ng-update": {
     "packageGroup": [
       "@analogjs/astro-angular",
