--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -74,8 +74,7 @@
     },
 
     "application": {
-      "executor": "@analogjs/platform:dev-server",
-      "dependsOn": ["^build"]
+      "executor": "@analogjs/platform:dev-server"
     }
   },
   "tags": [],
