feat: add support for Angular v17.0.0-next.8

--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "16.2.2",
-    "@angular/common": "16.2.2",
-    "@angular/compiler": "16.2.2",
-    "@angular/core": "16.2.2",
-    "@angular/forms": "16.2.2",
-    "@angular/platform-browser": "16.2.2",
-    "@angular/platform-browser-dynamic": "16.2.2",
-    "@angular/platform-server": "16.2.2",
-    "@angular/router": "16.2.2",
+    "@angular/animations": "^17.0.0-next.8",
+    "@angular/common": "^17.0.0-next.8",
+    "@angular/compiler": "^17.0.0-next.8",
+    "@angular/core": "^17.0.0-next.8",
+    "@angular/forms": "^17.0.0-next.8",
+    "@angular/platform-browser": "^17.0.0-next.8",
+    "@angular/platform-browser-dynamic": "^17.0.0-next.8",
+    "@angular/platform-server": "^17.0.0-next.8",
+    "@angular/router": "^17.0.0-next.8",
     "@astrojs/mdx": "^1.1.0",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
@@ -77,22 +77,22 @@
     "ufo": "^1.1.2",
     "xhr2": "^0.2.1",
     "zod": "^3.21.4",
-    "zone.js": "^0.13.3"
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.0",
-    "@angular-devkit/core": "16.2.0",
-    "@angular-devkit/schematics": "16.2.0",
+    "@angular-devkit/build-angular": "^17.0.0-next.9",
+    "@angular-devkit/core": "^17.0.0-next.9",
+    "@angular-devkit/schematics": "^17.0.0-next.9",
     "@angular-eslint/eslint-plugin": "16.0.1",
     "@angular-eslint/eslint-plugin-template": "16.0.1",
     "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "16.2.2",
-    "@angular/language-service": "16.2.2",
+    "@angular/cli": "^17.0.0-next.9",
+    "@angular/compiler-cli": "^17.0.0-next.8",
+    "@angular/language-service": "^17.0.0-next.8",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "@ngtools/webpack": "^16.1.0",
+    "@ngtools/webpack": "^17.0.0-next.9",
     "@nx/cypress": "16.8.1",
     "@nx/eslint-plugin": "16.8.1",
     "@nx/jest": "16.8.1",
@@ -100,7 +100,7 @@
     "@nx/plugin": "16.8.1",
     "@nx/vite": "16.8.1",
     "@nx/web": "16.8.1",
-    "@schematics/angular": "16.2.0",
+    "@schematics/angular": "^17.0.0-next.9",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
     "@swc/core": "^1.2.173",
@@ -134,7 +134,7 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "16.2.1",
+    "ng-packagr": "^17.0.0-next.2",
     "nitropack": "^2.0.0",
     "nx": "16.8.1",
     "nx-cloud": "16.4.0",
@@ -151,7 +151,7 @@
     "tailwindcss": "^3.0.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.0.3",
+    "typescript": "~5.2.0",
     "vite": "4.4.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
