--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "^17.0.0-next.8",
-    "@angular/common": "^17.0.0-next.8",
-    "@angular/compiler": "^17.0.0-next.8",
-    "@angular/core": "^17.0.0-next.8",
-    "@angular/forms": "^17.0.0-next.8",
-    "@angular/platform-browser": "^17.0.0-next.8",
-    "@angular/platform-browser-dynamic": "^17.0.0-next.8",
-    "@angular/platform-server": "^17.0.0-next.8",
-    "@angular/router": "^17.0.0-next.8",
+    "@angular/animations": "^17.0.0-rc.0",
+    "@angular/common": "^17.0.0-rc.0",
+    "@angular/compiler": "^17.0.0-rc.0",
+    "@angular/core": "^17.0.0-rc.0",
+    "@angular/forms": "^17.0.0-rc.0",
+    "@angular/platform-browser": "^17.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^17.0.0-rc.0",
+    "@angular/platform-server": "^17.0.0-rc.0",
+    "@angular/router": "^17.0.0-rc.0",
     "@astrojs/mdx": "^1.1.0",
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
@@ -80,19 +80,19 @@
     "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0-next.9",
-    "@angular-devkit/core": "^17.0.0-next.9",
-    "@angular-devkit/schematics": "^17.0.0-next.9",
+    "@angular-devkit/build-angular": "^17.0.0-rc.0",
+    "@angular-devkit/core": "^17.0.0-rc.0",
+    "@angular-devkit/schematics": "^17.0.0-rc.0",
     "@angular-eslint/eslint-plugin": "16.0.1",
     "@angular-eslint/eslint-plugin-template": "16.0.1",
     "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "^17.0.0-next.9",
-    "@angular/compiler-cli": "^17.0.0-next.8",
-    "@angular/language-service": "^17.0.0-next.8",
+    "@angular/cli": "^17.0.0-rc.0",
+    "@angular/compiler-cli": "^17.0.0-rc.0",
+    "@angular/language-service": "^17.0.0-rc.0",
     "@astrojs/markdown-component": "^1.0.5",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "@ngtools/webpack": "^17.0.0-next.9",
+    "@ngtools/webpack": "^17.0.0-rc.0",
     "@nx/cypress": "16.8.1",
     "@nx/eslint-plugin": "16.8.1",
     "@nx/jest": "16.8.1",
@@ -100,7 +100,7 @@
     "@nx/plugin": "16.8.1",
     "@nx/vite": "16.8.1",
     "@nx/web": "16.8.1",
-    "@schematics/angular": "^17.0.0-next.9",
+    "@schematics/angular": "^17.0.0-rc.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
     "@swc/core": "^1.2.173",
@@ -120,7 +120,7 @@
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
     "cypress": "^13.0.0",
-    "esbuild": "0.19.3",
+    "esbuild": "0.19.5",
     "eslint": "8.46.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "2.14.0",
@@ -155,7 +155,7 @@
     "vite": "4.4.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.32.2",
+    "vitest": "1.0.0-beta.2",
     "webpack-bundle-analyzer": "^4.7.0",
     "xmlbuilder2": "^3.0.2"
   }
