--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "ajv-formats": "^2.1.1",
     "destr": "^1.2.2",
     "front-matter": "^4.0.2",
-    "h3": "^1.6.6",
     "isomorphic-fetch": "^3.0.0",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.1.0",
@@ -127,6 +126,7 @@
     "execa": "^7.1.1",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.1",
+    "h3": "^1.8.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "22.1.0",
@@ -135,7 +135,7 @@
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
     "ng-packagr": "^17.0.0-next.2",
-    "nitropack": "^2.0.0",
+    "nitropack": "^2.6.0",
     "nx": "16.8.1",
     "nx-cloud": "16.4.0",
     "playwright": "^1.30.0",
@@ -155,7 +155,7 @@
     "vite": "4.4.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "1.0.0-beta.2",
+    "vitest": "0.32.2",
     "webpack-bundle-analyzer": "^4.7.0",
     "xmlbuilder2": "^3.0.2"
   }
