--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0 || ^16.0.0"
+    "@angular-devkit/build-angular": "^15.0.0 || >=16.0.0"
   },
   "ng-update": {
     "packageGroup": [
