--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -60,7 +60,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "options": {
         "lintFilePatterns": [
           "apps/analog-app/**/*.ts",
