--- a/apps/astro-app-e2e-playwright/project.json
+++ b/apps/astro-app-e2e-playwright/project.json
@@ -15,7 +15,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/astro-app-e2e-playwright/**/*.{js,ts}"]
