--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "1.6.22",
-    "@nx/angular": "16.8.1",
-    "@nx/devkit": "16.8.1",
+    "@nx/angular": "17.0.1",
+    "@nx/devkit": "17.0.1",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
@@ -93,13 +93,12 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
     "@ngtools/webpack": "^17.0.0-rc.0",
-    "@nx/cypress": "16.8.1",
-    "@nx/eslint-plugin": "16.8.1",
-    "@nx/jest": "16.8.1",
-    "@nx/linter": "16.8.1",
-    "@nx/plugin": "16.8.1",
-    "@nx/vite": "16.8.1",
-    "@nx/web": "16.8.1",
+    "@nx/cypress": "17.0.1",
+    "@nx/eslint-plugin": "17.0.1",
+    "@nx/jest": "17.0.1",
+    "@nx/plugin": "17.0.1",
+    "@nx/vite": "17.0.1",
+    "@nx/web": "17.0.1",
     "@schematics/angular": "^17.0.0-rc.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
@@ -122,7 +121,7 @@
     "cypress": "^13.0.0",
     "esbuild": "0.19.5",
     "eslint": "8.46.0",
-    "eslint-config-prettier": "8.6.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.14.0",
     "execa": "^7.1.1",
     "fast-glob": "^3.2.12",
@@ -137,8 +136,7 @@
     "minimist": "^1.2.7",
     "ng-packagr": "^17.0.0-next.2",
     "nitropack": "^2.6.0",
-    "nx": "16.8.1",
-    "nx-cloud": "16.4.0",
+    "nx": "17.0.1",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
@@ -158,6 +156,7 @@
     "vite-tsconfig-paths": "4.2.0",
     "vitest": "0.32.2",
     "webpack-bundle-analyzer": "^4.7.0",
-    "xmlbuilder2": "^3.0.2"
+    "xmlbuilder2": "^3.0.2",
+    "@nx/eslint": "17.0.1"
   }
 }
