--- a/packages/router/project.json
+++ b/packages/router/project.json
@@ -22,7 +22,7 @@
       "defaultConfiguration": "production"
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "options": {
         "lintFilePatterns": [
           "packages/router/**/*.ts",
