--- a/libs/top-bar/project.json
+++ b/libs/top-bar/project.json
@@ -9,7 +9,7 @@
       "executor": "@nx/vite:test"
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/top-bar/**/*.ts", "libs/top-bar/**/*.html"]
