--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -36,7 +36,7 @@
       "dependsOn": ["^build"]
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["packages/platform/**/*.ts"]
