--- a/packages/trpc/project.json
+++ b/packages/trpc/project.json
@@ -23,7 +23,7 @@
       "defaultConfiguration": "production"
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["packages/trpc/**/*.ts", "packages/trpc/**/*.html"]
