--- a/packages/create-analog/project.json
+++ b/packages/create-analog/project.json
@@ -12,7 +12,7 @@
       }
     },
     "test": {
-      "executor": "@nx/vite:test"
+      "executor": "@analogjs/platform:vitest"
     },
     "version": {
       "executor": "@jscutlery/semver:version",
