--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -44,7 +44,7 @@
     },
     "test": {
       "dependsOn": ["^build"],
-      "executor": "@nx/vite:test"
+      "executor": "@analogjs/platform:vitest"
     },
     "version": {
       "executor": "@jscutlery/semver:version",
