--- a/packages/vite-plugin-angular/project.json
+++ b/packages/vite-plugin-angular/project.json
@@ -19,7 +19,7 @@
       }
     },
     "test": {
-      "executor": "@nx/vite:test"
+      "executor": "@analogjs/platform:vitest"
     },
     "version": {
       "executor": "@jscutlery/semver:version",
