--- a/apps/create-analog-e2e/project.json
+++ b/apps/create-analog-e2e/project.json
@@ -5,7 +5,7 @@
   "sourceRoot": "apps/create-analog-e2e/src",
   "targets": {
     "e2e": {
-      "executor": "@nx/vite:test"
+      "executor": "@analogjs/platform:vitest"
     }
   },
   "tags": [],
