--- a/nx.json
+++ b/nx.json
@@ -23,7 +23,7 @@
       "cache": true
     },
     "test": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "platform:build"],
       "cache": true
     },
     "e2e": {
