--- a/packages/create-analog/template-angular-v16/angular.json
+++ b/packages/create-analog/template-angular-v16/angular.json
@@ -10,7 +10,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@nx/vite:build",
+          "builder": "@analogjs/platform:vite",
           "options": {
             "configFile": "vite.config.ts",
             "main": "src/main.ts",
@@ -29,7 +29,7 @@
           }
         },
         "serve": {
-          "builder": "@nx/vite:dev-server",
+          "builder": "@analogjs/platform:vite-dev-server",
           "defaultConfiguration": "development",
           "options": {
             "buildTarget": "my-app:build",
@@ -46,7 +46,7 @@
           }
         },
         "test": {
-          "builder": "@nx/vite:test"
+          "builder": "@analogjs/platform:vitest"
         }
       }
     }
