--- a/packages/router/project.json
+++ b/packages/router/project.json
@@ -31,7 +31,7 @@
       }
     },
     "test": {
-      "executor": "@nx/vite:test"
+      "executor": "@analogjs/platform:vitest"
     },
     "version": {
       "executor": "@jscutlery/semver:version",
