--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
+    "resolveJsonModule": true,
     "paths": {
       "@analogjs/astro-angular": ["packages/astro-angular/src/index.ts"],
       "@analogjs/content": ["packages/content/src/index.ts"],
