--- a/libs/top-bar/project.json
+++ b/libs/top-bar/project.json
@@ -6,7 +6,7 @@
   "prefix": "analogjs",
   "targets": {
     "test": {
-      "executor": "@analogjs/platform:vitest"
+      "executor": "@nx/vite:test"
     },
     "lint": {
       "executor": "@nx/eslint:lint",
