--- a/apps/blog-app/project.json
+++ b/apps/blog-app/project.json
@@ -6,7 +6,7 @@
   "prefix": "blog",
   "targets": {
     "build": {
-      "executor": "@analogjs/platform:vite",
+      "executor": "@nx/vite:build",
       "outputs": [
         "{options.outputPath}",
         "{workspaceRoot}/dist/apps/blog-app/.nitro",
@@ -29,7 +29,7 @@
       }
     },
     "serve": {
-      "executor": "@analogjs/platform:vite-dev-server",
+      "executor": "@nx/vite:dev-server",
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "blog-app:build",
