--- a/packages/astro-angular/project.json
+++ b/packages/astro-angular/project.json
@@ -37,7 +37,7 @@
       }
     },
     "test": {
-      "executor": "@analogjs/platform:vitest"
+      "executor": "@nx/vite:test"
     },
     "version": {
       "executor": "@jscutlery/semver:version",
