--- a/packages/nx-plugin/project.json
+++ b/packages/nx-plugin/project.json
@@ -48,7 +48,7 @@
       }
     },
     "test": {
-      "executor": "@analogjs/platform:vitest"
+      "executor": "@nx/vite:test"
     }
   },
   "tags": []
