--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -69,7 +69,7 @@
       }
     },
     "test": {
-      "executor": "@analogjs/platform:vitest",
+      "executor": "@nx/vite:test",
       "outputs": ["{projectRoot}/coverage"]
     }
   },
