feat(platform): add Vite dev-server/build and Vitest executors (#719)

--- a/packages/nx-plugin/project.json
+++ b/packages/nx-plugin/project.json
@@ -27,6 +27,11 @@
             "input": "./packages/nx-plugin",
             "glob": "generators.json",
             "output": "."
+          },
+          {
+            "input": "./packages/nx-plugin",
+            "glob": "executors.json",
+            "output": "."
           }
         ]
       }
