--- a/packages/create-analog/template-angular-v16/package.json
+++ b/packages/create-analog/template-angular-v16/package.json
@@ -41,7 +41,7 @@
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "^16.2.0",
     "@angular/compiler-cli": "^16.2.0",
-    "@nx/vite": "^17.0.0",
+    "@nx/vite": "~16.8.1",
     "nx": "^17.0.0",
     "jsdom": "^22.1.0",
     "typescript": "~5.0.2",
