fix(create-analog): add v17 pre-release to package.json files

--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-analog",
-  "version": "0.2.55",
+  "version": "0.2.56",
   "type": "module",
   "license": "MIT",
   "author": "Brandon Roberts",
@@ -12,6 +12,7 @@
     "index.js",
     "template-angular-v15",
     "template-angular-v16",
+    "template-angular-v17-prerelease",
     "files"
   ],
   "main": "index.js",
