chore: update packages for Angular v17 template

--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -12,7 +12,7 @@
     "index.js",
     "template-angular-v15",
     "template-angular-v16",
-    "template-angular-v17-prerelease",
+    "template-angular-v17",
     "files"
   ],
   "main": "index.js",
