--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "zone.js": "^0.14.0"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "0.1700.0",
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular-devkit/core": "^17.0.0",
     "@angular-devkit/schematics": "^17.0.0",
