--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "nitropack": "^2.6.0",
     "@analogjs/vite-plugin-angular": "^0.2.19",
-    "@analogjs/vite-plugin-nitro": "^0.2.19",
+    "@analogjs/vite-plugin-nitro": "^0.2.19"
+  },
+  "devDependencies": {
     "@nx/devkit": "^16.0.0 || ^17.0.0"
   },
   "builders": "./src/lib/nx-plugin/executors.json",
