--- a/packages/create-analog/template-angular-v17/package.json
+++ b/packages/create-analog/template-angular-v17/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@nx/angular": "^17.1.0",
     "front-matter": "^4.0.2",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.1.0",
@@ -40,8 +41,8 @@
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
-    "@nx/vite": "~16.8.1",
-    "nx": "^17.0.0",
+    "@nx/vite": "^17.1.0",
+    "nx": "^17.1.0",
     "jsdom": "^22.1.0",
     "typescript": "~5.2.0",
     "vite": "^4.4.8",
