chore: add test executor with application builder

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -76,6 +76,10 @@
     "application": {
       "executor": "@analogjs/platform:dev-server",
       "dependsOn": ["^platform:build"]
+    },
+
+    "vitest": {
+      "executor": "@analogjs/platform:test"
     }
   },
   "tags": [],
