--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@netlify/functions": "^2.3.0",
     "@ngtools/webpack": "^17.0.0",
     "@nx/cypress": "17.0.1",
+    "@nx/eslint": "17.0.1",
     "@nx/eslint-plugin": "17.0.1",
     "@nx/jest": "17.0.1",
     "@nx/js": "17.0.1",
@@ -152,12 +153,11 @@
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.0",
-    "vite": "4.4.8",
+    "vite": "5.0.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.32.2",
+    "vitest": "0.34.6",
     "webpack-bundle-analyzer": "^4.7.0",
-    "xmlbuilder2": "^3.0.2",
-    "@nx/eslint": "17.0.1"
+    "xmlbuilder2": "^3.0.2"
   }
 }
