--- a/packages/create-analog/template-angular-v17-blog/angular.json
+++ b/packages/create-analog/template-angular-v17-blog/angular.json
@@ -10,11 +10,12 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@nx/vite:build",
+          "builder": "@analogjs/platform:vite",
           "options": {
             "configFile": "vite.config.ts",
             "main": "src/main.ts",
-            "outputPath": "dist/client"
+            "outputPath": "dist/client",
+            "tsConfig": "tsconfig.app.json"
           },
           "defaultConfiguration": "production",
           "configurations": {
@@ -28,7 +29,7 @@
           }
         },
         "serve": {
-          "builder": "@nx/vite:dev-server",
+          "builder": "@analogjs/platform:vite-dev-server",
           "defaultConfiguration": "development",
           "options": {
             "buildTarget": "my-app:build",
