--- a/nx.json
+++ b/nx.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "workspaceLayout": {
-    "libsDir": "packages"
+    "libsDir": "libs"
   },
   "affected": {
     "defaultBase": "main"
