--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
   ],
   "dependencies": {
     "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.0.1",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
     "@angular/forms": "^17.0.0",
+    "@angular/material": "^17.0.1",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
@@ -102,9 +104,9 @@
     "@nx/vite": "17.0.1",
     "@nx/web": "17.0.1",
     "@schematics/angular": "^17.0.0",
-    "@swc-node/register": "^1.4.2",
+    "@swc-node/register": "~1.6.7",
     "@swc/cli": "0.1.62",
-    "@swc/core": "^1.2.173",
+    "@swc/core": "~1.3.85",
     "@swc/helpers": "0.5.1",
     "@types/babel__core": "^7.20.0",
     "@types/jest": "29.4.4",
@@ -129,6 +131,7 @@
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.1",
     "h3": "^1.8.2",
+    "happy-dom": "^12.10.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "22.1.0",
