--- a/package.json
+++ b/package.json
@@ -104,6 +104,9 @@
     "@nx/vite": "17.0.1",
     "@nx/web": "17.0.1",
     "@schematics/angular": "^17.0.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "0.1.62",
     "@swc/core": "~1.3.85",
@@ -151,6 +154,7 @@
     "prismjs": "^1.29.0",
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.9.0",
+    "semantic-release": "^22.0.7",
     "start-server-and-test": "^1.15.4",
     "tailwindcss": "^3.0.2",
     "ts-jest": "29.1.0",
