--- a/apps/trpc-app/project.json
+++ b/apps/trpc-app/project.json
@@ -66,7 +66,7 @@
         "lintFilePatterns": ["apps/trpc-app/**/*.ts", "apps/trpc-app/**/*.html"]
       }
     },
-    "test": {
+    "tests": {
       "executor": "@nx/vite:test",
       "outputs": ["{projectRoot}/coverage"]
     }
