chore: update lib tests

--- a/libs/card/project.json
+++ b/libs/card/project.json
@@ -6,7 +6,7 @@
   "tags": [],
   "projectType": "library",
   "targets": {
-    "test": {
+    "tests": {
       "executor": "@nx/vite:test"
     },
     "lint": {
