--- a/libs/top-bar/project.json
+++ b/libs/top-bar/project.json
@@ -5,7 +5,7 @@
   "sourceRoot": "libs/top-bar/src",
   "prefix": "analogjs",
   "targets": {
-    "test": {
+    "tests": {
       "executor": "@nx/vite:test"
     },
     "lint": {
