build: convert commonjs packages to esm (#598)

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "analogjs-platform",
   "version": "1.0.0-beta.1",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "nx serve",
     "ng": "nx",
