--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@analogjs/platform",
   "version": "1.0.0-beta.1",
-  "type": "commonjs",
+  "type": "module",
   "description": "The fullstack meta-framework for Angular",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
   "exports": {
