--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -2,6 +2,7 @@
   "name": "@analogjs/vite-plugin-angular",
   "description": "Vite Plugin for Angular",
   "version": "1.0.0-beta.1",
+  "type": "module",
   "keywords": [
     "vite",
     "vitest",
