--- a/packages/vite-plugin-nitro/package.json
+++ b/packages/vite-plugin-nitro/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@analogjs/vite-plugin-nitro",
   "version": "1.0.0-beta.1",
-  "type": "commonjs",
+  "type": "module",
   "description": "A Vite plugin for adding a nitro API server",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
   "exports": {
