--- a/apps/trpc-app/project.json
+++ b/apps/trpc-app/project.json
@@ -56,7 +56,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "trpc-app:build"
+        "buildTarget": "trpc-app:build"
       }
     },
     "lint": {
