--- a/nx.json
+++ b/nx.json
@@ -22,10 +22,6 @@
       "inputs": ["production", "^production"],
       "cache": true
     },
-    "test": {
-      "dependsOn": ["^build"],
-      "cache": true
-    },
     "e2e": {
       "dependsOn": ["^build"],
       "cache": true
@@ -33,15 +29,16 @@
     "serve": {
       "dependsOn": ["^build"]
     },
-    "cypress": {
-      "inputs": ["default", "^production"]
-    },
     "lint": {
       "inputs": ["default", "{workspaceRoot}/.eslintrc.json"],
       "cache": true
     },
     "build-package": {
       "cache": true
+    },
+    "@nx/vite:test": {
+      "cache": true,
+      "inputs": ["default", "^production"]
     }
   },
   "generators": {
