--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "@astrojs/react": "^3.0.0",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "1.6.22",
-    "@nx/angular": "17.0.1",
-    "@nx/devkit": "17.0.1",
+    "@nx/angular": "17.1.3",
+    "@nx/devkit": "17.1.3",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "ajv-formats": "^2.1.1",
@@ -85,10 +85,10 @@
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular-devkit/core": "^17.0.0",
     "@angular-devkit/schematics": "^17.0.0",
-    "@angular-eslint/eslint-plugin": "16.0.1",
-    "@angular-eslint/eslint-plugin-template": "16.0.1",
-    "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "^17.0.0",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "^17.0.0",
     "@angular/language-service": "^17.0.0",
     "@astrojs/markdown-component": "^1.0.5",
@@ -96,14 +96,14 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@netlify/functions": "^2.3.0",
     "@ngtools/webpack": "^17.0.0",
-    "@nx/cypress": "17.0.1",
-    "@nx/eslint": "17.0.1",
-    "@nx/eslint-plugin": "17.0.1",
-    "@nx/jest": "17.0.1",
-    "@nx/js": "17.0.1",
-    "@nx/plugin": "17.0.1",
-    "@nx/vite": "17.0.1",
-    "@nx/web": "17.0.1",
+    "@nx/cypress": "17.1.3",
+    "@nx/eslint": "17.1.3",
+    "@nx/eslint-plugin": "17.1.3",
+    "@nx/jest": "17.1.3",
+    "@nx/js": "17.1.3",
+    "@nx/plugin": "17.1.3",
+    "@nx/vite": "17.1.3",
+    "@nx/web": "17.1.3",
     "@schematics/angular": "^17.0.0",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "0.1.62",
@@ -116,8 +116,8 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "6.12.0",
+    "@typescript-eslint/parser": "6.12.0",
     "all-contributors-cli": "^6.24.0",
     "astro": "3.0.8",
     "conventional-changelog": "^3.1.25",
@@ -142,7 +142,7 @@
     "minimist": "^1.2.7",
     "ng-packagr": "^17.0.0",
     "nitropack": "^2.6.0",
-    "nx": "17.0.1",
+    "nx": "17.1.3",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
